day1 hero section pt1

--- a/index.html
+++ b/index.html
@@ -3,11 +3,30 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Omnifood</title>
     <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
-    <h1>A healthy meal delivered to your door, every single day</h1>
-    <div class="test">TESTING</div>
+    <section class="Section-Hero">
+      <div class="hero-grid">
+        <div class="hero-description">
+          <h1>A healthy meal delivered to your door, every single day</h1>
+          <p class="hero-summary">
+            The smart 365-days-per-year food subscription that will make you eat
+            healthy again. Tailored to your personal tastes and nutritional
+            needs. We have delivered 250,000+ meals last year!
+          </p>
+          <a href="#" class="subscription">Start Eating Healthy</a>
+          <a href="#" class="learn-more">learn more &darr;</a>
+        </div>
+        <div class="hero-image">
+          <img
+            src="/img/hero.png"
+            class="hero-img"
+            alt="a woman eating food, food on table, food in container"
+          />
+        </div>
+      </div>
+    </section>
   </body>
 </html>
