day2 hero section pt2

--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
             healthy again. Tailored to your personal tastes and nutritional
             needs. We have delivered 250,000+ meals last year!
           </p>
-          <a href="#" class="subscription">Start Eating Healthy</a>
-          <a href="#" class="learn-more">learn more &darr;</a>
+          <a href="#" class="subscription btn margin-right-sm"
+            >Start Eating Well</a
+          >
+          <a href="#" class="learn-more btn">learn more &darr;</a>
         </div>
         <div class="hero-image">
           <img
