day2 hero section final

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Omnifood</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
@@ -14,12 +20,25 @@
           <p class="hero-summary">
             The smart 365-days-per-year food subscription that will make you eat
             healthy again. Tailored to your personal tastes and nutritional
-            needs. We have delivered 250,000+ meals last year!
+            needs.
           </p>
           <a href="#" class="subscription btn margin-right-sm"
             >Start Eating Well</a
           >
           <a href="#" class="learn-more btn">learn more &darr;</a>
+          <div class="customer-images">
+            <div class="customer-img">
+              <img src="img/customers/customer-1.jpg" alt="Customer Photos" />
+              <img src="img/customers/customer-2.jpg" alt="Customer Photos" />
+              <img src="img/customers/customer-3.jpg" alt="Customer Photos" />
+              <img src="img/customers/customer-4.jpg" alt="Customer Photos" />
+              <img src="img/customers/customer-5.jpg" alt="Customer Photos" />
+              <img src="img/customers/customer-6.jpg" alt="Customer Photos" />
+            </div>
+            <p class="customer-numbers">
+              <span>250,000+ </span> meals delivered last year!
+            </p>
+          </div>
         </div>
         <div class="hero-image">
           <img
