day2 Building the header

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
+    <header class="header">
+      <img src="/img/omnifood-logo.png" alt="Omnifood Logo" class="logo" />
+
+      <nav class="navigations">naviagations</nav>
+    </header>
     <section class="Section-Hero">
       <div class="hero-grid">
         <div class="hero-description">
