day2 Building the nav

--- a/index.html
+++ b/index.html
@@ -16,7 +16,15 @@
     <header class="header">
       <img src="/img/omnifood-logo.png" alt="Omnifood Logo" class="logo" />
 
-      <nav class="navigations">naviagations</nav>
+      <nav class="navigations">
+        <ul class="main-nav-bar">
+          <li><a href="#" class="nav-blocks">Section1</a></li>
+          <li><a href="#" class="nav-blocks">Section2</a></li>
+          <li><a href="#" class="nav-blocks">Section3</a></li>
+          <li><a href="#" class="nav-blocks">Section4</a></li>
+          <li><a href="#" class="nav-blocks nav-cta">Section5</a></li>
+        </ul>
+      </nav>
     </header>
     <section class="Section-Hero">
       <div class="hero-grid">
