Day3 Building the How-To section part1

--- a/index.html
+++ b/index.html
@@ -62,5 +62,60 @@
         </div>
       </div>
     </section>
+    <section class="Section-how-to container">
+      <p>how it works</p>
+      <h2>Your daily dose of health in 3 simple steps</h2>
+      <div class="grid grid--2-col">
+        <div class="how-text-box">
+          <p class="step-number">01</p>
+          <h3>Tell us what you like (and what not):</h3>
+          <p class="how-to-details">
+            Never again waste time thinking about what to eat! Omnifood AI will
+            create a 100% personalized weekly meal plan just for you. It makes
+            sure you get all the nutrients and vitamins you need, no matter what
+            diet you follow!
+          </p>
+        </div>
+        <div class="how-to-image">
+          <img
+            src="/img/app/app-screen-1.png"
+            alt="choices on app"
+            class="app-image"
+          />
+        </div>
+        <div class="how-to-image">
+          <img
+            src="/img/app/app-screen-2.png"
+            alt="choices on app"
+            class="app-image"
+          />
+        </div>
+        <div class="how-text-box">
+          <p class="step-number">02</p>
+          <h3>Approve your weekly meal plan:</h3>
+          <p class="how-to-details">
+            Once per week, approve the meal plan generated for you by Omnifood
+            AI. You can change ingredients, swap entire meals, or even add your
+            own recipes.
+          </p>
+        </div>
+        <div class="how-text-box">
+          <p class="step-number">03</p>
+          <h3>Receive meals at convenient time:</h3>
+          <p class="how-to-details">
+            Best chefs in town will cook your selected meal every day, and we
+            will deliver it to your door whenever works best for you. You can
+            change delivery schedule and address daily!
+          </p>
+        </div>
+        <div class="how-to-image">
+          <img
+            src="/img/app/app-screen-3.png"
+            alt="choices on app"
+            class="app-image"
+          />
+        </div>
+      </div>
+    </section>
   </body>
 </html>
