Day3 Building the How-to section final part

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <section class="Section-how-to container">
       <p>how it works</p>
       <h2>Your daily dose of health in 3 simple steps</h2>
-      <div class="grid grid--2-col">
+      <div class="grid grid--2-col grid--center-v">
         <div class="how-text-box">
           <p class="step-number">01</p>
           <h3>Tell us what you like (and what not):</h3>
