Day3 Building the featured-in section

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;600;700;800&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/css/style.css" />
@@ -60,6 +60,22 @@
             alt="a woman eating food, food on table, food in container"
           />
         </div>
+      </div>
+    </section>
+    <section class="Section-featured-in container">
+      <h2 class="featured">as featured in</h2>
+      <div class="logos">
+        <img src="/img/logos/techcrunch.png" alt="Tech-Crunch logo" />
+        <img
+          src="/img/logos/business-insider.png"
+          alt="Business-Insider logo"
+        />
+        <img
+          src="/img/logos/the-new-york-times.png"
+          alt="The-New-York-Times logo"
+        />
+        <img src="/img/logos/forbes.png" alt="Forbes logo" />
+        <img src="/img/logos/usa-today.png" alt="USA-Today logo" />
       </div>
     </section>
     <section class="Section-how-to container">
