Day4 Building the meals section pt1

--- a/index.html
+++ b/index.html
@@ -13,125 +13,170 @@
     <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
-    <header class="header">
-      <img src="/img/omnifood-logo.png" alt="Omnifood Logo" class="logo" />
+    <main>
+      <header class="header">
+        <img src="/img/omnifood-logo.png" alt="Omnifood Logo" class="logo" />
 
-      <nav class="navigations">
-        <ul class="main-nav-bar">
-          <li><a href="#" class="nav-blocks">Section1</a></li>
-          <li><a href="#" class="nav-blocks">Section2</a></li>
-          <li><a href="#" class="nav-blocks">Section3</a></li>
-          <li><a href="#" class="nav-blocks">Section4</a></li>
-          <li><a href="#" class="nav-blocks nav-cta">Section5</a></li>
-        </ul>
-      </nav>
-    </header>
-    <section class="Section-Hero">
-      <div class="hero-grid">
-        <div class="hero-description">
-          <h1>A healthy meal delivered to your door, every single day</h1>
-          <p class="hero-summary">
-            The smart 365-days-per-year food subscription that will make you eat
-            healthy again. Tailored to your personal tastes and nutritional
-            needs.
-          </p>
-          <a href="#" class="subscription btn margin-right-sm"
-            >Start Eating Well</a
-          >
-          <a href="#" class="learn-more btn">learn more &darr;</a>
-          <div class="customer-images">
-            <div class="customer-img">
-              <img src="img/customers/customer-1.jpg" alt="Customer Photos" />
-              <img src="img/customers/customer-2.jpg" alt="Customer Photos" />
-              <img src="img/customers/customer-3.jpg" alt="Customer Photos" />
-              <img src="img/customers/customer-4.jpg" alt="Customer Photos" />
-              <img src="img/customers/customer-5.jpg" alt="Customer Photos" />
-              <img src="img/customers/customer-6.jpg" alt="Customer Photos" />
-            </div>
-            <p class="customer-numbers">
-              <span>250,000+ </span> meals delivered last year!
+        <nav class="navigations">
+          <ul class="main-nav-bar">
+            <li><a href="#" class="nav-blocks">Section1</a></li>
+            <li><a href="#" class="nav-blocks">Section2</a></li>
+            <li><a href="#" class="nav-blocks">Section3</a></li>
+            <li><a href="#" class="nav-blocks">Section4</a></li>
+            <li><a href="#" class="nav-blocks nav-cta">Section5</a></li>
+          </ul>
+        </nav>
+      </header>
+      <section class="Section-Hero">
+        <div class="hero-grid">
+          <div class="hero-description">
+            <h1>A healthy meal delivered to your door, every single day</h1>
+            <p class="hero-summary">
+              The smart 365-days-per-year food subscription that will make you
+              eat healthy again. Tailored to your personal tastes and
+              nutritional needs.
             </p>
+            <a href="#" class="subscription btn margin-right-sm"
+              >Start Eating Well</a
+            >
+            <a href="#" class="learn-more btn">learn more &darr;</a>
+            <div class="customer-images">
+              <div class="customer-img">
+                <img src="img/customers/customer-1.jpg" alt="Customer Photos" />
+                <img src="img/customers/customer-2.jpg" alt="Customer Photos" />
+                <img src="img/customers/customer-3.jpg" alt="Customer Photos" />
+                <img src="img/customers/customer-4.jpg" alt="Customer Photos" />
+                <img src="img/customers/customer-5.jpg" alt="Customer Photos" />
+                <img src="img/customers/customer-6.jpg" alt="Customer Photos" />
+              </div>
+              <p class="customer-numbers">
+                <span>250,000+ </span> meals delivered last year!
+              </p>
+            </div>
+          </div>
+          <div class="hero-image">
+            <img
+              src="/img/hero.png"
+              class="hero-img"
+              alt="a woman eating food, food on table, food in container"
+            />
           </div>
         </div>
-        <div class="hero-image">
+      </section>
+      <section class="Section-featured-in container">
+        <h2 class="featured">as featured in</h2>
+        <div class="logos">
+          <img src="/img/logos/techcrunch.png" alt="Tech-Crunch logo" />
           <img
-            src="/img/hero.png"
-            class="hero-img"
-            alt="a woman eating food, food on table, food in container"
+            src="/img/logos/business-insider.png"
+            alt="Business-Insider logo"
           />
-        </div>
-      </div>
-    </section>
-    <section class="Section-featured-in container">
-      <h2 class="featured">as featured in</h2>
-      <div class="logos">
-        <img src="/img/logos/techcrunch.png" alt="Tech-Crunch logo" />
-        <img
-          src="/img/logos/business-insider.png"
-          alt="Business-Insider logo"
-        />
-        <img
-          src="/img/logos/the-new-york-times.png"
-          alt="The-New-York-Times logo"
-        />
-        <img src="/img/logos/forbes.png" alt="Forbes logo" />
-        <img src="/img/logos/usa-today.png" alt="USA-Today logo" />
-      </div>
-    </section>
-    <section class="Section-how-to container">
-      <p>how it works</p>
-      <h2>Your daily dose of health in 3 simple steps</h2>
-      <div class="grid grid--2-col grid--center-v">
-        <div class="how-text-box">
-          <p class="step-number">01</p>
-          <h3>Tell us what you like (and what not):</h3>
-          <p class="how-to-details">
-            Never again waste time thinking about what to eat! Omnifood AI will
-            create a 100% personalized weekly meal plan just for you. It makes
-            sure you get all the nutrients and vitamins you need, no matter what
-            diet you follow!
-          </p>
-        </div>
-        <div class="how-to-image">
           <img
-            src="/img/app/app-screen-1.png"
-            alt="choices on app"
-            class="app-image"
+            src="/img/logos/the-new-york-times.png"
+            alt="The-New-York-Times logo"
           />
+          <img src="/img/logos/forbes.png" alt="Forbes logo" />
+          <img src="/img/logos/usa-today.png" alt="USA-Today logo" />
         </div>
-        <div class="how-to-image">
-          <img
-            src="/img/app/app-screen-2.png"
-            alt="choices on app"
-            class="app-image"
+      </section>
+      <section class="Section-how-to container">
+        <p>how it works</p>
+        <h2>Your daily dose of health in 3 simple steps</h2>
+        <div class="grid grid--2-col grid--center-v">
+          <div class="how-text-box">
+            <p class="step-number">01</p>
+            <h3>Tell us what you like (and what not):</h3>
+            <p class="how-to-details">
+              Never again waste time thinking about what to eat! Omnifood AI
+              will create a 100% personalized weekly meal plan just for you. It
+              makes sure you get all the nutrients and vitamins you need, no
+              matter what diet you follow!
+            </p>
+          </div>
+          <div class="how-to-image">
+            <img
+              src="/img/app/app-screen-1.png"
+              alt="choices on app"
+              class="app-image"
+            />
+          </div>
+          <div class="how-to-image">
+            <img
+              src="/img/app/app-screen-2.png"
+              alt="choices on app"
+              class="app-image"
+            />
+          </div>
+          <div class="how-text-box">
+            <p class="step-number">02</p>
+            <h3>Approve your weekly meal plan:</h3>
+            <p class="how-to-details">
+              Once per week, approve the meal plan generated for you by Omnifood
+              AI. You can change ingredients, swap entire meals, or even add
+              your own recipes.
+            </p>
+          </div>
+          <div class="how-text-box">
+            <p class="step-number">03</p>
+            <h3>Receive meals at convenient time:</h3>
+            <p class="how-to-details">
+              Best chefs in town will cook your selected meal every day, and we
+              will deliver it to your door whenever works best for you. You can
+              change delivery schedule and address daily!
+            </p>
+          </div>
+          <div class="how-to-image">
+            <img
+              src="/img/app/app-screen-3.png"
+              alt="choices on app"
+              class="app-image"
+            />
+          </div>
+        </div>
+      </section>
+      <section class="meals-section container">
+        <p>Meals</p>
+        <h2>Omnifood AI chooses from 5,000+ recipes</h2>
+        <div class="grid grid--3-col">
+          <div class="meals">
+            <img
+              src="/img/meals/meal-1.jpg"
+              class="meal"
+              alt="Japanese Gyozas"
+            />
+            <span>Veg</span>
+            <div class="meal-name">Japanese Gyozas</div>
+            <ul>
+              <li class="meal-prperties"><span><ion-icon name="flame-outline"></ion-icon> </span>650 calories</li>
+              <li class="meal-prperties"><span><ion-icon name="nutrition-outline"></ion-icon> </span>NutriScore &reg; 74</li>
+              <li class="meal-prperties"><span><ion-icon name="star-outline"></ion-icon> </span>Rating of 4.9 (537)</li>
+            </ul>
+          </div>
+          <div class="meals">
+            <img
+            src="/img/meals/meal-2.jpg"
+            class="meal"
+            alt="Japanese Gyozas"
           />
+          <span>Veg</span> <span>Paleo</span>
+          <div class="meal-name">Avocado Salad</div>
+          <ul>
+            <li class="meal-prperties"><span><ion-icon name="flame-outline"></ion-icon> </span>400 calories</li>
+            <li class="meal-prperties"><span><ion-icon name="nutrition-outline"></ion-icon> </span>NutriScore &reg; 92</li>
+            <li class="meal-prperties"><span><ion-icon name="star-outline"></ion-icon> </span>Rating of 4.8 (441)</li>
+          </ul>
         </div>
-        <div class="how-text-box">
-          <p class="step-number">02</p>
-          <h3>Approve your weekly meal plan:</h3>
-          <p class="how-to-details">
-            Once per week, approve the meal plan generated for you by Omnifood
-            AI. You can change ingredients, swap entire meals, or even add your
-            own recipes.
-          </p>
+          </div>
         </div>
-        <div class="how-text-box">
-          <p class="step-number">03</p>
-          <h3>Receive meals at convenient time:</h3>
-          <p class="how-to-details">
-            Best chefs in town will cook your selected meal every day, and we
-            will deliver it to your door whenever works best for you. You can
-            change delivery schedule and address daily!
-          </p>
-        </div>
-        <div class="how-to-image">
-          <img
-            src="/img/app/app-screen-3.png"
-            alt="choices on app"
-            class="app-image"
-          />
-        </div>
-      </div>
-    </section>
+      </section>
+    </main>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
   </body>
 </html>
