Day4 Building the Meal Section pt2

--- a/index.html
+++ b/index.html
@@ -139,32 +139,38 @@
         <h2>Omnifood AI chooses from 5,000+ recipes</h2>
         <div class="grid grid--3-col">
           <div class="meals">
+            <div class="meal-img">
             <img
               src="/img/meals/meal-1.jpg"
-              class="meal"
               alt="Japanese Gyozas"
             />
-            <span>Veg</span>
+          </div>
+          <div class="meal-detail">
+            <span class="tag">Veg</span>
             <div class="meal-name">Japanese Gyozas</div>
             <ul>
-              <li class="meal-prperties"><span><ion-icon name="flame-outline"></ion-icon> </span>650 calories</li>
-              <li class="meal-prperties"><span><ion-icon name="nutrition-outline"></ion-icon> </span>NutriScore &reg; 74</li>
-              <li class="meal-prperties"><span><ion-icon name="star-outline"></ion-icon> </span>Rating of 4.9 (537)</li>
+              <li class="meal-properties"><ion-icon name="flame-outline" class="meal-icon"></ion-icon><span><strong>650 </strong>calories</span></li>
+              <li class="meal-properties"><ion-icon name="nutrition-outline" class="meal-icon"></ion-icon><span>NutriScore&reg; <strong>74</strong></span></li>
+              <li class="meal-properties"><ion-icon name="star-outline" class="meal-icon"></ion-icon><span>Rating of <strong>4.9</strong> (537)</span></li>
             </ul>
           </div>
+          </div>
           <div class="meals">
+            <div class="meal-img">
             <img
             src="/img/meals/meal-2.jpg"
-            class="meal"
             alt="Japanese Gyozas"
           />
-          <span>Veg</span> <span>Paleo</span>
+        </div>
+          <div class="meal-detail">
+          <span class="tag">Veg</span> <span class="tag tag-2">Paleo</span>
           <div class="meal-name">Avocado Salad</div>
           <ul>
-            <li class="meal-prperties"><span><ion-icon name="flame-outline"></ion-icon> </span>400 calories</li>
-            <li class="meal-prperties"><span><ion-icon name="nutrition-outline"></ion-icon> </span>NutriScore &reg; 92</li>
-            <li class="meal-prperties"><span><ion-icon name="star-outline"></ion-icon> </span>Rating of 4.8 (441)</li>
+            <li class="meal-properties"><ion-icon name="flame-outline" class="meal-icon"></ion-icon><span><strong>400</strong> calories</span></li>
+            <li class="meal-properties"><ion-icon name="nutrition-outline" class="meal-icon"></ion-icon><span>NutriScore&reg; <strong>92</strong></span></li>
+            <li class="meal-properties"><ion-icon name="star-outline" class="meal-icon"></ion-icon><span>Rating of <strong>4.8</strong>(441)</span></li>
           </ul>
+        </div>
         </div>
           </div>
         </div>
