--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
           </div>
         </div>
       </section>
-      <section class="meals-section container center-content">
-        <p>Meals</p>
-        <h2>Omnifood AI chooses from 5,000+ recipes</h2>
+      <section class="meals-section container">
+        <p class="center-content">Meals</p>
+        <h2 class="center-content">Omnifood AI chooses from 5,000+ recipes</h2>
         <div class="grid grid--3-col">
           <div class="meals">
             <div class="meal-img">
@@ -271,6 +271,63 @@
             >See all recipes <span class="arrow">&rarr;</span></a
           >
         </div>
+      </section>
+      <section class="Section-testimonial grid grid--2-col">
+        <div class="testimonial-container">
+          <p>Testimonials</p>
+          <h2>Once you try it you can't go back</h2>
+          <div class="testimonial grid grid--2-col">
+            <figure>
+              <img
+                src="/img/customers/dave.jpg"
+                alt="Customer's Image"
+                class="Testimonialimg"
+              />
+              <blockquote>
+                Inexpensive, healthy and great-tasting meals, without even
+                having to order manually! It feels truly magical.
+              </blockquote>
+              <p class="customer-name-testimonial">&mdash;Dave Bryson</p>
+            </figure>
+            <figure>
+              <img
+                src="/img/customers/ben.jpg"
+                alt="Customer's Image"
+                class="Testimonialimg"
+              />
+              <blockquote>
+                The AI algorithm is crazy good, it chooses the right meals for
+                me every time. It's amazing not to worry about food anymore!
+              </blockquote>
+              <p class="customer-name-testimonial">&mdash;Ben Hadley</p>
+            </figure>
+            <figure>
+              <img
+                src="/img/customers/steve.jpg"
+                alt="Customer's Image"
+                class="Testimonialimg"
+              />
+              <blockquote>
+                Omnifood is a life saver! I just started a company, so there's
+                no time for cooking. I couldn't live without my daily meals now!
+              </blockquote>
+              <p class="customer-name-testimonial">&mdash;Steve Miller</p>
+            </figure>
+            <figure>
+              <img
+                src="/img/customers/hannah.jpg"
+                alt="Customer's Image"
+                class="Testimonialimg"
+              />
+              <blockquote>
+                I got Omnifood for the whole family, and it frees up so much
+                time! Plus, everything is organic and vegan and without plastic.
+              </blockquote>
+              <p class="customer-name-testimonial">&mdash;Hannah Smith</p>
+            </figure>
+          </div>
+        </div>
+        <div class="gallery"></div>
       </section>
     </main>
     <script
