Day5 building the Testimonial Section final part

--- a/index.html
+++ b/index.html
@@ -327,7 +327,44 @@
             </figure>
           </div>
         </div>
-        <div class="gallery"></div>
+        <div class="gallery grid grid--3-col">
+          <figure class="gallery-item">
+            <img src="/img/gallery/gallery-1.jpg" alt="photos in gallery" />
+          </figure>
+          <figure class="gallery-item">
+            <img src="/img/gallery/gallery-2.jpg" alt="photos in gallery" />
+          </figure>
+          <figure class="gallery-item">
+            <img src="/img/gallery/gallery-3.jpg" alt="photos in gallery" />
+          </figure>
+          <figure class="gallery-item">
+            <img src="/img/gallery/gallery-4.jpg" alt="photos in gallery" />
+          </figure>
+          <figure class="gallery-item">
+            <img src="/img/gallery/gallery-5.jpg" alt="photos in gallery" />
+          </figure>
+          <figure class="gallery-item">
+            <img src="/img/gallery/gallery-6.jpg" alt="photos in gallery" />
+          </figure>
+          <figure class="gallery-item">
+            <img src="/img/gallery/gallery-7.jpg" alt="photos in gallery" />
+          </figure>
+          <figure class="gallery-item">
+            <img src="/img/gallery/gallery-8.jpg" alt="photos in gallery" />
+          </figure>
+          <figure class="gallery-item">
+            <img src="/img/gallery/gallery-9.jpg" alt="photos in gallery" />
+          </figure>
+          <figure class="gallery-item">
+            <img src="/img/gallery/gallery-10.jpg" alt="photos in gallery" />
+          </figure>
+          <figure class="gallery-item">
+            <img src="/img/gallery/gallery-11.jpg" alt="photos in gallery" />
+          </figure>
+          <figure class="gallery-item">
+            <img src="/img/gallery/gallery-12.jpg" alt="photos in gallery" />
+          </figure>
+        </div>
       </section>
     </main>
     <script
