Day6 Building the price-section pt1

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </div>
       </section>
       <section class="Section-how-to container">
-        <p>how it works</p>
+        <p class="sub-heading">how it works</p>
         <h2>Your daily dose of health in 3 simple steps</h2>
         <div class="grid grid--2-col grid--center-v">
           <div class="how-text-box">
@@ -141,7 +141,7 @@
         </div>
       </section>
       <section class="meals-section container">
-        <p class="center-content">Meals</p>
+        <p class="center-content sub-heading">Meals</p>
         <h2 class="center-content">Omnifood AI chooses from 5,000+ recipes</h2>
         <div class="grid grid--3-col">
           <div class="meals">
@@ -274,7 +274,7 @@
       </section>
       <section class="Section-testimonial grid grid--2-col">
         <div class="testimonial-container">
-          <p>Testimonials</p>
+          <p class="sub-heading">Testimonials</p>
           <h2>Once you try it you can't go back</h2>
           <div class="testimonial grid grid--2-col">
             <figure>
@@ -364,6 +364,100 @@
           <figure class="gallery-item">
             <img src="/img/gallery/gallery-12.jpg" alt="photos in gallery" />
           </figure>
+        </div>
+      </section>
+      <section class="Section-price container">
+        <p class="sub-heading">Pricing</p>
+        <h2>Once you try it you can't go back</h2>
+        <div class="grid grid--2-col">
+          <div class="price-panel price-panel-starter">
+            <div class="price-panel-intro">
+              <p class="price-name">starter</p>
+              <p class="price-cost"><span>$</span> 399</p>
+              <p class="price-comment">per month. That's just $13 per meal</p>
+            </div>
+            <div class="meal-list margin-bottom-md">
+              <ul>
+                <li>
+                  <ion-icon
+                    name="checkmark-circle-outline"
+                    class="meal-list-icon"
+                  ></ion-icon
+                  ><span>1 meal per day</span>
+                </li>
+                <li>
+                  <ion-icon
+                    name="checkmark-circle-outline"
+                    class="meal-list-icon"
+                  ></ion-icon
+                  ><span>Order from 11am to 9pm</span>
+                </li>
+                <li>
+                  <ion-icon
+                    name="checkmark-circle-outline"
+                    class="meal-list-icon"
+                  ></ion-icon
+                  ><span>Delivery is free</span>
+                </li>
+                <li>
+                  <ion-icon
+                    name="close-circle-outline"
+                    class="meal-list-icon"
+                  ></ion-icon
+                  ><span>Delivery charges may apply</span>
+                </li>
+              </ul>
+            </div>
+            <div class="price-buy center-content">
+              <a href="#" class="subscription btn margin-right-sm"
+                >Start Eating Well</a
+              >
+            </div>
+          </div>
+          <div class="price-panel price-panel-complete">
+            <div class="price-panel-intro">
+              <p class="price-name">complete</p>
+              <p class="price-cost"><span>$</span> 649</p>
+              <p class="price-comment">per month. That's just $11 per meal</p>
+            </div>
+            <div class="meal-list margin-bottom-md">
+              <ul>
+                <li>
+                  <ion-icon
+                    name="checkmark-circle-outline"
+                    class="meal-list-icon"
+                  ></ion-icon
+                  ><span>2 meals per day</span>
+                </li>
+                <li>
+                  <ion-icon
+                    name="checkmark-circle-outline"
+                    class="meal-list-icon"
+                  ></ion-icon
+                  ><span>Order 24/7</span>
+                </li>
+                <li>
+                  <ion-icon
+                    name="checkmark-circle-outline"
+                    class="meal-list-icon"
+                  ></ion-icon
+                  ><span>Delivery is free</span>
+                </li>
+                <li>
+                  <ion-icon
+                    name="checkmark-circle-outline"
+                    class="meal-list-icon"
+                  ></ion-icon
+                  ><span>Get access to latest recipes</span>
+                </li>
+              </ul>
+            </div>
+            <div class="price-buy center-content">
+              <a href="#" class="subscription btn margin-right-sm"
+                >Start Eating Well</a
+              >
+            </div>
+          </div>
         </div>
       </section>
     </main>
