Day6 Building the price-panel final part

--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
       <section class="Section-price container">
         <p class="sub-heading">Pricing</p>
         <h2>Once you try it you can't go back</h2>
-        <div class="grid grid--2-col">
+        <div class="grid grid--2-col grid--2col-bt-margin">
           <div class="price-panel price-panel-starter">
             <div class="price-panel-intro">
               <p class="price-name">starter</p>
@@ -458,6 +458,12 @@
               >
             </div>
           </div>
+        </div>
+        <div class="features grid grid--4-col">
+          <div>feature1</div>
+          <div>feature2</div>
+          <div>feature3</div>
+          <div>feature4</div>
         </div>
       </section>
     </main>
