Day7 Building the cta section pt1

--- a/index.html
+++ b/index.html
@@ -502,6 +502,12 @@
           </div>
         </div>
       </section>
+      <section class="Section-cta container">
+        <div class="cta">
+          <div class="cta-form">form here</div>
+          <div class="cta-img">imge</div>
+        </div>
+      </section>
     </main>
     <script
       type="module"
